# ProyectoFinalAnalisis

./: CMakeLists.txt
src/: Imagenes.py  InterfazPrincipal.py  ejecucion.py  gui.py
src/cpp/: main.cpp
src/cpp/algorithms/: algorithms.rar
src/data/results/: resultadosC++.csv
src/data/results/matrices/: resultado_IV_4_ParallelBlock_n128.txt  resultado_IV_4_ParallelBlock_n256.txt  resultado_IV_4_ParallelBlock_n4.txt  resultado_IV_5_EnhancedParallelBlock_n2.txt  resultado_Naiv_n128.txt  resultado_Naiv_n256.txt  resultado_ParallelBlock_n128.txt  resultado_ParallelBlock_n256.txt  resultado_ParallelBlock_n64.txt  resultado_WinogradOriginal_n32.txt
src/data/results/times/: resultadosC++_n128.csv  resultadosC++_n16.csv  resultadosC++_n2.csv  resultadosC++_n256.csv  resultadosC++_n32.csv  resultadosC++_n4.csv  resultadosC++_n64.csv  resultadosC++_n8.csv  resultadosPython_n128.csv  (+7 more)
src/data/test_cases/: matrizA128.txt  matrizA16.txt  matrizA2.txt  matrizA256.txt  matrizA32.txt  matrizA4.txt  matrizA64.txt  matrizA8.txt  matrizB128.txt  matrizB16.txt  matrizB2.txt  matrizB256.txt  matrizB32.txt  matrizB4.txt  matrizB64.txt  matrizB8.txt
src/python/: main.py  matriz1.txt  matriz2.txt  resultados.csv
src/python/algorithms/: III3SequentialBlock.py  III4ParallelBlock.py  IV3SequentialBlock.py  IV4ParallelBlock.py  IV5EnhancedParallelBlock.py  NaivLoopUnrollingFour.py  NaivLoopUnrollingTwo.py  NaivOnArray.py  NaviOnArray.py  ParallelBlock.py  SequentialBlock.py  Strassen.py  WinogradOriginal.py  WinogradScaled.py
src/python/utils/: ArchivoUtilidades.py
(+6 files in other folders)
